Switching to Nonnull /  Optional<> ouputs - 1